Changed images to smaller jpgs

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
 
 <div class="featurette">
   <span>
-    <%= image_tag("achieve.png", size: "600x600", class: "featurette-image pull-right") %>
+    <%= image_tag("achieve.jpg", size: "600x600", class: "featurette-image pull-right") %>
     <h2 class="featurette-heading">Achieve. <span class="muted">Brighten your path.</span></h2>
   </span>
   <br />
@@ -16,7 +16,7 @@
 
 <div class="featurette">  
   <span>
-    <%= image_tag("be_equipped.png", size: "600x600", class: "featurette-image pull-right") %>
+    <%= image_tag("be_equipped.jpg", size: "600x600", class: "featurette-image pull-right") %>
     <h2 class="featurette-heading">Be Equipped. <span class="muted">Be prepared.</span></h2>
   </span>
   <br />
@@ -31,7 +31,7 @@
 
 <div class="featurette">
   <span>
-    <%= image_tag("have_fun.png", size: "600x600", class: "featurette-image pull-right") %>
+    <%= image_tag("have_fun.jpg", size: "600x600", class: "featurette-image pull-right") %>
     <h2 class="featurette-heading">HAVE FUN!</h2>
   </span>
   <br />
