Bolded text on Contact page.

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Contact') %>
 <h1 class="title">Contact</h1>
-<p class="contact">Nelson Hsieh<br/>
+<p class="contact"><b>Nelson Hsieh</b><br/>
    SMAAT Coordinator<br />
 	 Students of Mansfield Alumni Assistance and Tuition
 </p>
@@ -13,7 +13,7 @@
 	 Email   <a href="mailto:smaatenquiries@outlook.com">smaatenquiries@outlook.com</a><br />
 	 Website <a href="http://www.smaat.com.au">www.smaat.com.au</a></p>
 
-<p class="contact">SCHOOL LIAISONS<br />
+<p class="contact"><b>SCHOOL LIAISONS</b><br />
 	 Ms S Moye<br />
 	 HOD (Teaching and Learning)<br />
 	 Email   <a href="mailto:smoye1@eq.edu.au">smoye1@eq.edu.au</a></p>
