Changed payment details.

--- a/app/views/static_pages/info.html.erb
+++ b/app/views/static_pages/info.html.erb
@@ -11,7 +11,7 @@
 <hr class="divider">
 <h2 class="heading">COST</h2>
 <p class="p-info">$20 per session</p>
-<p class="p-info">Payment should be made in MONTHLY installments OR in FULL for the remaining weeks in the term. Payments are made at the lower office.</p>
+<p class="p-info">Payment must be made in full for the remaining weeks in the term. Payments are made at the lower office.</p>
 <p class="p-info">If students are unable to attend sessions at least 24 hours’ notice should be given to the SMAAT Coordinator. If no notice is given, the tutors still receive payment for their services despite the student’s absence.</p>
 <p class="p-info">A payment form will be sent to the parent's email address upon registration.</p>
 
