--- a/app/views/users/mailer/confirmation_instructions.html.erb
+++ b/app/views/users/mailer/confirmation_instructions.html.erb
@@ -8,7 +8,7 @@ Thank you for enrolling in the SMAAT program.
 
 <p>Upon confirmation, further information will be emailed to you with regard to payment, a brief outline of the responsibility and role of the tutor will have and the expectations of your child so that time in these sessions will be used effectively and productively.</p>
 
-<p>Please be advised that sessions should be paid before students attend. Sessions should be either paid in monthly instalments or in full for an entire term.</p>
+<p>Please be advised that sessions must be paid before students attend. Payment must be made in full for the remaining weeks in the term.</p>
 
 <p>The tutors look forward to aiding your student any way we can.</p>
 
