--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -15,6 +15,11 @@
   		<%= f.text_field :form %><br /></div>
 
       <p>Which days would you like to attend?</p>
+      <p class="p-note">
+        Please note: Minimal spaces are available on Tuesday due to high demand.
+        Please contact us if Wednesday and Thursday are unsuitable.
+      </p>
+
   		<div><%= f.check_box :tuesday %>
   		<%= f.label :tuesday %><br /></div>
 
