Removed confirmable and updated emails, as well as their attachments.

--- a/app/views/sign_up_info_mailer/sign_up_information.html.erb
+++ b/app/views/sign_up_info_mailer/sign_up_information.html.erb
@@ -1,6 +1,8 @@
 <p>Dear <%= @user.parent_name %>,</p>
 
-<p>Please find attached 3 forms, one which outlines the enrolled sessions your student will be enrolled for and the second is an agreement that outlines the roles and responsibilities that you will play in your student’s academic success. The third is a payment detail form and all payment is to be made to the lower office. Your sessions will be $20 a session.</p>
+<p>Thank you for enrolling in the SMAAT program. This email is confirmation of your registration and contains important information.</p>
+
+<p>Please find attached 3 forms, one which outlines the sessions your student will be enrolled for and the second is an agreement that outlines the roles and responsibilities that you will play in your student’s academic success. The third is a payment detail form. Your sessions will be $20 a session. Please be advised that sessions must be paid at the lower office before students attend. Payment must be made in full for the remaining weeks in the term.</p>
 
 <p>It is important that I stress that the time the tutors have with your student is minimal compared to the time in which they spend at home and as such the agreement encourages you the parent/guardian to continue the work we do with your student.</p>
 
