Added junk mail info to email.

--- a/app/views/sign_up_info_mailer/sign_up_information.html.erb
+++ b/app/views/sign_up_info_mailer/sign_up_information.html.erb
@@ -6,6 +6,8 @@
 
 <p><b>Please refer to the document titled "term_1_notice.pdf" as to the next available session. It will be expected as a result of your registration, your student will attend THE NEXT AVAILABLE SESSION. If there are any problems with this, please email the SMAAT coordinator (at <a href="mailto:smaatenquiries@outlook.com">smaatenquiries@outlook.com</a>).</b></p>
 
+<p>To ensure that we are able to communicate with you effectively, please change your email settings to allow the SMAAT emails to be sent straight to your inbox. </p>
+
 <p>It is important that I stress that the time the tutors have with your student is minimal compared to the time in which they spend at home and as such the agreement encourages you the parent/guardian to continue the work we do with your student.</p>
 
 <p>Please bring the agreement signed to the first session.<br /> 
