--- a/app/views/sign_up_info_mailer/sign_up_information.html.erb
+++ b/app/views/sign_up_info_mailer/sign_up_information.html.erb
@@ -2,7 +2,7 @@
 
 <p>Thank you for enrolling in the SMAAT program. This email is confirmation of your registration and contains important information.</p>
 
-<p>Please find attached 3 forms, one which outlines the sessions your student will be enrolled for and the second is an agreement that outlines the roles and responsibilities that you will play in your student’s academic success. The third is a payment detail form. Your sessions will be $20 a session. Please be advised that sessions must be paid at the lower office before students attend. Payment must be made in full for the remaining weeks in the term.</p>
+<p>Please find attached 4 forms, two of which outline the sessions your student will be enrolled for and the second is an agreement that outlines the roles and responsibilities that you will play in your student’s academic success. The third is a payment detail form. Your sessions will be $20 a session. Please be advised that sessions must be paid at the lower office before students attend. Payment must be made in full for the remaining weeks in the term.</p>
 
 <p><b>Please refer to the document titled "term_1_notice.pdf" as to the next available session. It will be expected as a result of your registration, your student will attend THE NEXT AVAILABLE SESSION. If there are any problems with this, please email the SMAAT coordinator (at <a href="mailto:smaatenquiries@outlook.com">smaatenquiries@outlook.com</a>).</b></p>
 
