Updated tutoring location on info page.

--- a/app/views/static_pages/info.html.erb
+++ b/app/views/static_pages/info.html.erb
@@ -7,7 +7,7 @@
 <p class="p-info">3:10PM - 4:30PM</p>
 <hr class="divider">
 <h2 class="heading">WHERE</h2>
-<p class="p-info">D BLOCK</p>
+<p class="p-info">F BLOCK (F OPEN AREA - FOA)</p>
 <hr class="divider">
 <h2 class="heading">COST</h2>
 <p class="p-info">$20 per session</p>
