Changed sign up mail wording.:

--- a/app/views/sign_up_info_mailer/sign_up_information.html.erb
+++ b/app/views/sign_up_info_mailer/sign_up_information.html.erb
@@ -2,9 +2,15 @@
 
 <p>Thank you for enrolling in the SMAAT program. This email is confirmation of your registration and contains important information.</p>
 
-<p>Please find attached 4 forms, two of which outline the sessions your student will be enrolled for and the second is an agreement that outlines the roles and responsibilities that you will play in your student’s academic success. The third is a payment detail form. Your sessions will be $20 a session. Please be advised that sessions must be paid at the lower office before students attend. Payment must be made in full for the remaining weeks in the term.</p>
+<p>Please find attached 3 forms:</p>
 
-<p><b>Please refer to the document titled "term3_notice_2014.pdf" as to the next available session. It will be expected as a result of your registration, your student will attend THE NEXT AVAILABLE SESSION. If there are any problems with this, please email the SMAAT coordinator (at <a href="mailto:smaatenquiries@outlook.com">smaatenquiries@outlook.com</a>).</b></p>
+<ol>
+  <li>Outlines the sessions your student will be enrolled for.</li>
+  <li>An agreement that outlines the roles and responsibilities that you will play in your student’s academic success.</li>
+  <li>A payment detail form. Your sessions will be $20 a session. Please be advised that sessions must be paid at the lower office before students attend. Payment must be made in full for the remaining weeks in the term.</li>
+</ol>
+
+<p><b>Please refer to the document titled "term1_notice_2015.pdf" as to the next available session. It will be expected as a result of your registration, your student will attend THE NEXT AVAILABLE SESSION. If there are any problems with this, please email the SMAAT coordinator (at <a href="mailto:smaatenquiries@outlook.com">smaatenquiries@outlook.com</a>).</b></p>
 
 <p>To ensure that we are able to communicate with you effectively, please change your email settings to allow the SMAAT emails to be sent straight to your inbox. </p>
 
