Updated project to use rails 4.1.1. Updated sass-rails. Changed availability comment on sign up page.

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -16,8 +16,8 @@
 
       <p>Which days would you like to attend?</p>
       <p class="p-note">
-        Please note: Minimal spaces are available on Thursday due to high demand.
-        Please contact us if Tuesday and Wednesday are unsuitable.
+        Please note: Minimal spaces are available on Tuesday due to high demand. Wednesday and Thursday still have spots available.
+        Please contact us if Wednesday and Thursday are unsuitable.
       </p>
 
   		<div><%= f.check_box :tuesday %>
