Changed availability to Tuesday only.

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -16,8 +16,8 @@
 
       <p>Which days would you like to attend?</p>
       <p class="p-note">
-        Please note: Minimal spaces are available on Tuesday due to high demand. Wednesday and Thursday still have spots available.
-        Please contact us if Wednesday and Thursday are unsuitable.
+        Please note: Minimal spaces are available on Tuesday and Wednesday due to high demand. Thursday still has spots available.
+        Please contact us if Thursday is unsuitable.
       </p>
 
   		<div><%= f.check_box :tuesday %>
