Update for term 3 2015
- Change attachments
- Add Prahlad's name to everything

--- a/app/views/users/mailer/confirmation_instructions.html.erb
+++ b/app/views/users/mailer/confirmation_instructions.html.erb
@@ -17,7 +17,7 @@ Thank you for enrolling in the SMAAT program.
 <p>Kind regards</p>
 
 
-<p>Nelson Hsieh<br/>
+<p>Prahlad Payda<br/>
    SMAAT Coordinator<br />
 	 Students of Mansfield Alumni Assistance and Tuition
 </p>
