Change home page, contact page, navbar
- Remove Tutor menu from navbar

- Add Prahlad to contact page

- Add download link for term notice to Calendar item in navbar

- Remove tutor sign up link from bottom of home page

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Contact') %>
 <h1 class="title">Contact</h1>
-<p class="contact"><b>Nelson Hsieh</b><br/>
+<p class="contact"><b>Prahlad Payda</b><br/>
    SMAAT Coordinator<br />
 	 Students of Mansfield Alumni Assistance and Tuition
 </p>
