--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,16 +8,7 @@
           <li><%= link_to "Information", info_path %></li>
           <li><%= link_to "Why SMAAT?", why_smaat_path %></li>
           <li><%= link_to "Contact", contact_path %></li>
-          <li id="fat-menu" class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              Tutors <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "Sign up", "#" %></li>
-              <li><%= link_to "Login", "#" %></li>
-            </ul>
-          </li>
-          <li><%= link_to "Calendar", "#" %></li>
+          <li><a href="/assets/term3_notice_2015.pdf" download="term3_notice_2015.pdf">Calendar</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <%= render 'layouts/registration_items' %>
